# yolact

./: .gitignore  Dockerfile  eval.py  grpc_client.py  grpc_server.py
cppclient/: .gitignore  CMakeLists.txt
cppclient/protos/: detection_v2.proto
cppclient/src/: detect_v2_client.cpp  detection_v2.grpc.pb.cc  detection_v2.grpc.pb.h  detection_v2.pb.cc  detection_v2.pb.h
layers/: output_utils.py
protos/: detection_v2.proto
py_protos/: common_utils.py  detection_v2_pb2.py  detection_v2_pb2_grpc.py
